Fixed zoom on input and partially fixed background scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
 
+html {
+    font-size: calc(1em);
+    font-family: "Inter", sans-serif;
+    background-color: #4865ff;
+    background-image: linear-gradient(
+      45deg,
+      hsl(240deg 100% 20%) 0%,
+      hsl(289deg 100% 21%) 11%,
+      hsl(315deg 100% 27%) 22%,
+      hsl(329deg 100% 36%) 33%,
+      hsl(337deg 100% 43%) 44%,
+      hsl(357deg 91% 59%) 56%,
+      hsl(17deg 100% 59%) 67%,
+      hsl(34deg 100% 53%) 78%,
+      hsl(45deg 100% 50%) 89%,
+      hsl(55deg 100% 50%) 100%
+    );
+    background-attachment: fixed;
+    background-size: contain;
+    overflow: hidden;
+  }
+
 body {
   margin: 0;
-  overflow-x: hidden;
-}
-
-html {
-  font-size: calc(1em);
-  font-family: "Inter", sans-serif;
-  background-color: #4865ff;
-  background-image: linear-gradient(
-    45deg,
-    hsl(240deg 100% 20%) 0%,
-    hsl(289deg 100% 21%) 11%,
-    hsl(315deg 100% 27%) 22%,
-    hsl(329deg 100% 36%) 33%,
-    hsl(337deg 100% 43%) 44%,
-    hsl(357deg 91% 59%) 56%,
-    hsl(17deg 100% 59%) 67%,
-    hsl(34deg 100% 53%) 78%,
-    hsl(45deg 100% 50%) 89%,
-    hsl(55deg 100% 50%) 100%
-  );
-  background-attachment: fixed;
-  background-size: contain;
+  overflow: hidden;
 }
 
 ul {
@@ -41,7 +42,7 @@ li {
   list-style-type: none;
   margin: 10px;
   border-radius: 15px;
-  max-width: 40ch;
+  max-width: 30ch;
   word-wrap: break-word;
 }
 
